// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bud.build.config has expected cache default 1`] = `
Object {
  "buildDependencies": Object {
    "bud": Any<Array>,
  },
  "cacheDirectory": StringContaining ".budfiles",
  "managedPaths": Any<Array>,
  "type": "filesystem",
  "version": Any<String>,
}
`;

exports[`bud.build.config has expected default asset/image rule 1`] = `
Object {
  "exclude": Object {},
  "generator": Object {
    "filename": "assets/[name][ext]",
  },
  "test": Object {},
  "type": "asset/resource",
}
`;

exports[`bud.build.config has expected default css rule 1`] = `
Object {
  "exclude": Object {},
  "test": Object {},
  "use": Array [
    Object {
      "loader": StringContaining "mini-css-extract-plugin/dist/loader.js",
      "options": Object {},
    },
    Object {
      "loader": StringContaining "css-loader/dist/cjs.js",
      "options": Object {
        "importLoaders": 1,
        "sourceMap": false,
      },
    },
    Object {
      "loader": StringContaining "postcss-loader/dist/cjs.js",
      "options": Object {
        "postcssOptions": Any<Object>,
        "sourceMap": true,
      },
    },
  ],
}
`;

exports[`bud.build.config has expected default csv rule 1`] = `
Object {
  "test": Object {},
  "use": Array [
    Object {
      "loader": StringContaining "csv-loader/index.js",
    },
  ],
}
`;

exports[`bud.build.config has expected default font rule 1`] = `
Object {
  "exclude": Object {},
  "generator": Object {
    "filename": "assets/[name][ext]",
  },
  "parser": Object {
    "dataUrlCondition": Object {
      "maxSize": 50000,
    },
  },
  "test": /\\\\\\.\\(ttf\\|otf\\|eot\\|woff2\\?\\|ico\\)\\$/,
  "type": "asset",
}
`;

exports[`bud.build.config has expected default html rule 1`] = `
Object {
  "test": Object {},
  "use": Array [
    Object {
      "loader": StringContaining "html-loader/dist/cjs.js",
    },
  ],
}
`;

exports[`bud.build.config has expected default js rule 1`] = `
Object {
  "exclude": Object {},
  "test": Object {},
  "use": Array [
    Object {
      "loader": Any<String>,
      "options": Any<Object>,
    },
  ],
}
`;

exports[`bud.build.config has expected default json rule 1`] = `
Object {
  "parser": Object {
    "parse": [Function],
  },
  "test": Object {},
  "type": "json",
}
`;

exports[`bud.build.config has expected default requireEnsure rule 1`] = `
Object {
  "parser": Object {
    "requireEnsure": false,
  },
  "test": Object {},
}
`;

exports[`bud.build.config has expected default svg rule 1`] = `
Object {
  "exclude": Object {},
  "generator": Object {
    "filename": "assets/[name][ext]",
  },
  "test": Object {},
  "type": "asset/resource",
}
`;

exports[`bud.build.config has expected default toml rule 1`] = `
Object {
  "parser": Object {
    "parse": [Function],
  },
  "test": Object {},
  "type": "json",
}
`;

exports[`bud.build.config has expected default xml rule 1`] = `
Object {
  "test": Object {},
  "use": Array [
    Object {
      "loader": StringContaining "/xml-loader/index.js",
    },
  ],
}
`;

exports[`bud.build.config has expected default yaml rule 1`] = `
Object {
  "parser": Object {
    "parse": [Function],
  },
  "test": Object {},
  "type": "json",
}
`;

exports[`bud.build.config has expected number of plugins 1`] = `4`;

exports[`bud.build.config has expected resolve.extensions default 1`] = `
Array [
  ".wasm",
  ".mjs",
  ".js",
  ".jsx",
  ".css",
  ".json",
  ".json5",
  ".toml",
  ".xml",
  ".csv",
  ".yml",
  ".yaml",
  ".xml",
]
`;
